fix: update import paths from "@common-module" to "@commonmodule" across the codebase
- Updated import statements in WalletLoginConfig, WalletLoginManager, and WalletLoginModal files to reflect the new package naming convention.
- Adjusted related TypeScript declaration and map files accordingly.
- Modified package.json to change the package name and update the dependency version for "@commonmodule/wallet".

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@common-module/wallet-login",
+  "name": "@commonmodule/wallet-login",
   "author": "yj.gaia",
   "homepage": "https://personas.gaia.cc/yj.gaia",
   "version": "0.2.4",
@@ -7,7 +7,7 @@
   "types": "./lib/index.d.ts",
   "main": "./lib/index.js",
   "dependencies": {
-    "@common-module/wallet": "^0.2.4"
+    "@commonmodule/wallet": "^0.2.5"
   },
   "devDependencies": {}
 }
